--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h3>FUNDNGO</h3>
                         <p>Providing solutions of investment, fundraising for both donors and NGOs.</p>
                     </div>
-                    <div>
+                    <div class="img-3">
                         <img src="images/phyci.png">
                     </div>
                 </div>
